--- a/Assets/Prefabs/Ui/MenuPanel.uxml
+++ b/Assets/Prefabs/Ui/MenuPanel.uxml
@@ -3,8 +3,8 @@
     <ui:VisualElement name="VisualElement" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0.75);">
         <ui:VisualElement name="Panel" style="flex-grow: 1; margin-right: 20%; margin-left: 20%;">
             <ui:Label text="MASQUERADE MASSACRE" style="background-color: rgba(255, 255, 255, 0); color: rgb(255, 255, 255); -unity-text-align: upper-center; font-size: 28px; -unity-text-auto-size: best-fit 10px 40px; -unity-text-generator: advanced; height: 15%; width: 100%;"/>
-            <ui:Button text="Play" name="Button_PlayAgain" style="padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; align-items: auto; align-self: center; left: 0%; width: 30%; height: 8%;"/>
-            <ui:Button text="Quit" name="Button_Quit" style="padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; align-items: auto; align-self: center; left: 0%; width: 30%; height: 8%;"/>
+            <ui:Button text="Play" name="Button_PlayAgain" selectable="true" style="padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; align-items: auto; align-self: center; left: 0%; width: 30%; height: 8%;"/>
+            <ui:Button text="Quit" name="Button_Quit" selectable="true" style="padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; align-items: auto; align-self: center; left: 0%; width: 30%; height: 8%;"/>
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
