--- a/Assets/Prefabs/Ui/HudPanel.uxml
+++ b/Assets/Prefabs/Ui/HudPanel.uxml
@@ -4,8 +4,10 @@
         <ui:VisualElement style="flex-grow: 1; width: 100%; height: 10%;"/>
         <ui:VisualElement style="flex-grow: 1; position: absolute; width: 76%; height: 50%; top: 23%; align-items: flex-start; justify-content: center; align-self: flex-start; background-color: rgb(255, 239, 231);"/>
         <ui:Image source="project://database/Assets/Prefabs/Art%20Assets/folder.png?fileID=2800000&amp;guid=84f618f3a3874c542803af4fe47c6466&amp;type=3#folder" name="Image" style="flex-grow: 1; height: 100%; align-items: center; justify-content: center;">
-            <ui:Image source="project://database/Assets/UI%20Toolkit/UnityThemes/UnityDefaultRuntimeTheme.tss?fileID=-6527069497977903076&amp;guid=1eb9f962d539ef3458a50bcf905c77ec&amp;type=3#console.warnicon@2x" scale-mode="ScaleToFit" name="Image" tint-color="rgb(255, 255, 255)" style="flex-grow: 1; width: 15%; height: 20%; left: 17%; align-self: flex-start; top: -25px; max-height: 30%; rotate: -5deg;"/>
+            <ui:VisualElement style="flex-grow: 1; left: -27%; max-height: 28%; align-self: center; align-items: center; align-content: center; flex-direction: row; flex-wrap: wrap; overflow: hidden; max-width: 50px; top: -19px; rotate: 0 0 0 0;">
+                <ui:Image source="project://database/Assets/UI%20Toolkit/UnityThemes/UnityDefaultRuntimeTheme.tss?fileID=-6527069497977903076&amp;guid=1eb9f962d539ef3458a50bcf905c77ec&amp;type=3#console.warnicon@2x" scale-mode="ScaleToFit" name="Image" tint-color="rgb(255, 255, 255)" style="flex-grow: 1; width: auto; height: auto; align-self: flex-start; max-height: 100%; rotate: -5deg;"/>
+            </ui:VisualElement>
         </ui:Image>
-        <ui:Button text="YouShouldNotBeAbleToSeeThis" selectable="true" name="button-dossier" style="opacity: 1; flex-grow: 1; visibility: hidden; position: absolute; top: 0%; width: 100%; height: 100%;"/>
+        <ui:Button text="" selectable="true" name="button-dossier" style="opacity: 1; flex-grow: 1; visibility: visible; position: absolute; top: 0%; width: 100%; height: 100%; display: flex; background-color: rgba(188, 188, 188, 0);"/>
     </ui:VisualElement>
 </ui:UXML>
